15049
In folder foo/bar adding file boo.scala and declaring the content as package foo.bar.boo causes compilation error:

{code}
C:\example>scalac -d target -sourcepath src src\foo\bar\*.scala
src\foo\bar\boo.scala:1: error: boo is already defined as object boo
package foo.bar.boo
                ^
one error found
{code}
